src/test/deca/syntax/invalid/provided/chaine_incomplete.deca
// Description:
//    Tests for a lexically incorrect program (unterminated string).
//
// Results:
//    Line 10: Error, unterminated string (at end of file).
//
// History:
//    Created on 01/01/2025

"chaine pas finie
